--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <p>Hello World</p>
   
   <p>Hello Moon</p>
+  
+  <h1>Title</h1>
+  <h2>Subtitle</h2>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
